gap fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,4 +34,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+  overflow-x: hidden;
 }
